; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvg__ptEquals.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvg__ptEquals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (float, float, float, float, float)* @nvg__ptEquals to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvg__ptEquals(float %0, float %1, float %2, float %3, float %4) #0 {
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  %12 = alloca float, align 4
  store float %0, float* %6, align 4
  store float %1, float* %7, align 4
  store float %2, float* %8, align 4
  store float %3, float* %9, align 4
  store float %4, float* %10, align 4
  %13 = load float, float* %8, align 4
  %14 = load float, float* %6, align 4
  %15 = fsub float %13, %14
  store float %15, float* %11, align 4
  %16 = load float, float* %9, align 4
  %17 = load float, float* %7, align 4
  %18 = fsub float %16, %17
  store float %18, float* %12, align 4
  %19 = load float, float* %11, align 4
  %20 = load float, float* %11, align 4
  %21 = fmul float %19, %20
  %22 = load float, float* %12, align 4
  %23 = load float, float* %12, align 4
  %24 = fmul float %22, %23
  %25 = fadd float %21, %24
  %26 = load float, float* %10, align 4
  %27 = load float, float* %10, align 4
  %28 = fmul float %26, %27
  %29 = fcmp olt float %25, %28
  %30 = zext i1 %29 to i32
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
